--- a/5.md
+++ b/5.md
@@ -38,21 +38,21 @@ Those who could not easily efface their differences, however, found the actualit
 
 After the war, observers of industrial life frequently concluded that the working class had sufficiently matured to be a responsible partner in securing economic growth. The judgment was particularly surprising given the strike wave of 1945-1946 in which nearly five million workers left the job. The wave struck such core industrial sectors as rails, steel, coal, oil, meat packing and automobiles and even resulted in general strikes in Lancaster, Pennsylvania, Rochester, New York, and Oakland, California. The wave in turn prompted condemnations from middle-class consumers and editorials boards across the country for allegedly interfering with prosperous postwar reconversion. Angered voters returned a Republican Congress, which passed the Taft-Hartley Act (1947) over President Truman's veto.  The Act limited the power of organized labor by outlawing the closed shop, allowing states to pass so-called right-to-work laws that prohibited contracts that made union membership a condition of employment, and requiring unions to give eighty days' notice of intention to strike. The strife of the late 1940s, however, proved to be the last gasp of the previous era rather than a foreshadowing of continued postwar conflict.
 
-Although vestiges of the heated rhetoric of the 1930s remained in babor organizations' condemnation of Taft-Hartley as a “slave labor law” and conservative Arizona senator Barry Goldwater's claim that Auto Workers President Walter Reuther constituted a greater threat to freedom than Sputnik, many commentators were more impressed with how labor and management accepted, albeit grudgingly, the validity of the other's interests of the other side. The two sides, the argument went, had come to a mature understanding that their success depended upon that of their opposite. Large profits and high wages were interdependent. By 1951, _Fortune Magazine_  could praise unions for putting aside class-based thinking that made business the "ENEMY" rather than viewing management as the "opposing team in a rough and competitive game." Unions had become, the editors assured readers, the “tool for gaining and keeping as an individual the status and security of a full citizen in a capitalist society,” and making "the worker to an amazing degree a middle-class member of a middle-class society.” _Fortune_ did regret that unions were still capable of “group greed,” favoring their members at the expense of the unorganized and supporting "featherbedding" in the face of technological progress.   The editors may well have had in mind Phillip Murray’s presidential address to the 1948 annual convention of the Congress of Industrial Organizations. Speaking in the aftermath of Taft-Hartley that limited or prohibited many of the tools that unions had used to organize, Murray nonetheless rejected the idea of classes, asserting that “the interests of farmers, factory hands, business and professional people, and white-collar toilers prove to be the same.”[^7]
+Although vestiges of the heated rhetoric of the 1930s remained in babor organizations' condemnation of Taft-Hartley as a “slave labor law” and conservative Arizona senator Barry Goldwater's claim that Auto Workers President Walter Reuther constituted a greater threat to freedom than Sputnik, many commentators were more impressed with how labor and management accepted, albeit grudgingly, the validity of the other's interests of the other side. The two sides, the argument went, had come to a mature understanding that their success depended upon that of their opposite. Large profits and high wages were interdependent. By 1951, _Fortune Magazine_  could praise unions for putting aside class-based thinking that made business the "ENEMY" and instead viewing management as the "opposing team in a rough and competitive game." Unions had become, the editors assured readers, the “tool for gaining and keeping as an individual the status and security of a full citizen in a capitalist society,” and making "the worker to an amazing degree a middle-class member of a middle-class society.” _Fortune_ did concede that unions were still capable of “group greed,” at times ignoring the public good such as when they insisted that members whose jobs were technologically obsolete continue to be paid. Labor spokespeople also applauded the end of class enmity. Congress of Industrial Organization President Phillip Murray told the organization's 1948 convention that “the interests of farmers, factory hands, business and professional people, and white-collar toilers prove to be the same.”[^7]
 
 [^7]:	Davenport, _U. S. A.: The Permanent Revolution_, 91; Harvey Swados, _On the Line_ (Urbana: University of Illinois Press, 1990), xv-xvi.
 
-One reason for the belief that class acceptance was replacing class conflict was the consequence of the unexpected sustained prosperity. The war boom continued with brief interruptions for recessions in 1949, 1953, and 1957, launching a wave of working-class consumer spending. Rising wages, especially in those sectors dominant by oligopolies that were capable of passing off wage increases to consumers, enabled an increasing number of workers to purchase discretionary items rather necessities. Many working-class families bought for the first time such goods as nylons, automobiles, vacations, and college educations, leading some commentators to talk about the growing democratization of social life. By the end of the period, air conditioners, washing machines, frozen foods, and television sets were less luxuries than part of the socially required basket of goods. Making the national spending spree possible was the liberal dispensation of credit. “Buy now, pay later” became a basic phrase of the American language. The Chamber of Commerce took the new consumerism as demonstration that the United States had developed a new, democratic form of capitalism. “U.S. capitalism is _popular_ capitalism, not only in the sense that it has popular support, but in the deeper sense that the people as a whole participate in it and use it,” crowed _Fortune_.[^8]
+Both *Fortune* and Murray pinned their argument about the concert of interests on the unprecedented expansion of consumption. Sustained profits and rising wages in the core sectors enabled an increasing number of workers to purchase discretionary items rather necessities. Many working-class families bought for the first time such goods as nylons, automobiles, vacations, and college educations, leading some commentators to talk about the growing democratization of social life. By the end of the period, air conditioners, washing machines, frozen foods, and television sets were less luxuries than part of the socially required basket of goods. Making the national spending spree possible was the liberal dispensation of credit. “Buy now, pay later” became a basic phrase of the American language. The Chamber of Commerce took the new consumerism as demonstration that the United States had developed a new, democratic form of capitalism. “U.S. capitalism is _popular_ capitalism, not only in the sense that it has popular support, but in the deeper sense that the people as a whole participate in it and use it,” crowed _Fortune_.[^8]
 
 [^8]:	Davenport, _U. S. A.: The Permanent Revolution_, 67-68.
 
-Postwar unions were willing to cede control of the shop floor in exchange for enforcement of long-term, centrally negotiated contracts. Writing in 1958, Princeton labor economist Richard A. Lester argued that over time consumer replaced worker as the prime identity among the rank-and-file. Taking their cues from the attitudinal change of their “constituents,” labor organizations became experts in bargaining, eager to further the narrowing of “differences between manual and white-collar workers.” Lester argued that this “maturity” accounted for the greater middle-class acceptance of unions, which in turned encouraged workers to adopt make mainstream goals.[^9] Interestingly, there was a companion literature that argued business had toned down its implacable opposition to organized labor and to the unfettered pursuit of profit. The corporation too had become mature, management expert Peter Drucker argued, concentrating on serving customers rather than heedlessly pursuing of profit for its own sake. In the end, it learned to respect its workers, perhaps especially because the blue-collar variety was in the process of disappearing and being replaced by knowledge workers. Drucker critics, then and since, saw this contention of a new capitalism as unduly optimistic, especially in the light the labor policy of General Electric’s Lemuel Boulware which was designed to undermine the authority of labor union leadership with take-it-or-leave stance at every negotiation.[^10]
+As postwar unions ceded control of the shop floor in exchange for long-term contracts that allowed members to maintain the new standard of living, such scholars as Princeton labor economist Richard A. Lester argued that the rank-and-file tended to identity as consumers rather than workers. Taking their cues from the attitudinal change of their “constituents,” labor organizations became experts in bargaining, eager to further the narrowing of “differences between manual and white-collar workers.” Lester argued that this “maturity” accounted for the greater middle-class acceptance of unions, which in turned encouraged workers to favor accumulation and individual advancement over solidarity.[^9] Interestingly, there was a companion literature that argued business had toned down its implacable opposition to organized labor and jettisoned the unfettered pursuit of profit. According to management expert Peter Drucker, the corporation had also matured, envisioning its function as serving customers rather than concentrating solely on augmenting gains. Service capitalism was especially respectful of workers, perhaps because those who worked with things were in the process of being replaced by those who labored in knowledge. Drucker's critics have regarded his work as unduly optimistic, especially in the light the labor policy of General Electric’s Lemuel Boulware which was designed to undermine the authority of labor union leadership with take-it-or-leave stance at every negotiation.[^10]
 
 [^9]:	Richard Lester, _As Unions Mature: An Analysis of the Evolution of American Unions_ (Princeton: Princeton University Press, 1958), 111-2, 132.
 
-[^10]:	Peter F. Drucker, _The New Society; the Anatomy of the Industrial Order._ (London: Heinemann, 1951); _idem_, _The Practice of Management._ (New York: Harper, 1954). Kim Phillips-Fein explores the hold of Boulwarism in Kim Phillips-Fein, *Invisible Hands: The Businessmen’s Crusade Against the New Deal* (W. W. Norton & Company, 2010), especially pages 97-105.
+[^10]:	Peter F. Drucker, _The New Society; the Anatomy of the Industrial Order._ (London: Heinemann, 1951); _idem_, _The Practice of Management._ (New York: Harper, 1954). Kim Phillips-Fein explores the hold of Boulwarism in  *Invisible Hands: The Businessmen’s Crusade Against the New Deal* (W. W. Norton & Company, 2010), especially pages 97-105.
 
-The declining salience of class made an appearance in much political science, even when it was not explicitly mentioned. Offered as a refutation to class analysis and C. Wright Mills’s notion of a ruling elite, Robert Dahl’s pluralist theory of “polyarchal” democracy held that American politics was a clash between various interest groups, rooted in descent, occupation, religion, and race. Dahl argued that no one of these was dominant in every instance before the polity. In fact, successful politicians put together coalitions of groups that do not necessarily align with one another on more than one issue. This was true both locally, as he contended in his empirical study of New Haven, and nationally.[^11] Dahl’s pluralism, with its multiple focal points of power, would at first inspection seem far from a “centered” discourse. On the surface, Dahl wrote, the system “has so little order and so much chaos,” which nonetheless provided “a high probability that any active and legitimate group will make itself heard effectively at some stage in the process of decision.” What was centered in Dahl’s conception of politics was the dependence of polyarchal democracy on a social consensus. Dahl posited that the system of constant contentions and compromises flourished because interest groups generally agreed on the legitimacy of other actors and on the permissible goals and means. Beneath the political system that tended toward “reinforcing agreement, encouraging moderation, and maintaining social peace in a restless and immoderate people operating in a gigantic, powerful, diversified, and incredibly complex society” was nonetheless a social life that had effective mechanisms of inclusion rooted in assent and concurrence.[^12]
+Political scientists also assumed class was a less salient factor in political behavior. Robert Dahl's pluralist theory of "polyarchal democracy,'' an explicit challenge to both class analysis and C. Wright Mills's notion of a ruling elite, envisioned American politics as a clash between various interest groups, rooted in descent, occupation, religion, and race. Dahl argued that no one of these was dominant in every instance. In fact, successful politicians put together coalitions of groups that do not necessarily align with one another on more than one issue. This was true both locally, as he contended in his empirical study of New Haven, and nationally.[^11] Dahl’s pluralism, with its multiple focal points of power, would at first inspection seem far from a “centered” discourse. On the surface, Dahl wrote, the system “has so little order and so much chaos,” which nonetheless provided “a high probability that any active and legitimate group will make itself heard effectively at some stage in the process of decision.” What was centered in Dahl’s conception of politics was the dependence of polyarchal democracy on a social consensus. Dahl posited that the system of constant contentions and compromises flourished because interest groups generally agreed on the legitimacy of other actors and on the permissible goals and means. Beneath the political system that tended toward “reinforcing agreement, encouraging moderation, and maintaining social peace in a restless and immoderate people operating in a gigantic, powerful, diversified, and incredibly complex society” was nonetheless a social life that had effective mechanisms of inclusion rooted in assent and concurrence.[^12]
 
 [^11]:	Dahl, _Who Governs? Democracy and Power in an American City_ (New Haven: Yale University Press, 1961).
 
