Mac Desktop 08 May 2019

--- a/5.md
+++ b/5.md
@@ -58,31 +58,32 @@ Political scientists also assumed class was a less salient factor in political b
 
 [^12]:	Dahl, _Preface_, 132, 150-1.
 
-Workers may have been acculturated in the American way of consumption, but that did not mean they were likely to achieve the socially approved standard of living. As social commentator David Riesman pointed out in his introduction to Eli Chinoy’s classic study of Lansing, Michigan autoworkers, Chinoy’s autoworkers were “victimized by the growing prestige of consumer goods,” convinced that the “care and feeding of products” was the “mainstay of life.”[^13] On reflection, Chinoy found, many workers saw consumption as a trap that prevented advancement. Chinoy cited one worker who regarded his downfall as the purchase of a car because it chained him to the factory to make payments. Still another believed he might have been somebody if only he had put his mind to it and “not worshipped the almighty dollar.” Chinoy concluded that autoworkers believed they had to make a choice between occupational advancement and acquisition of material possessions. When accumulation of goods proved emotionally unsatisfying, influenced by the mythology of opportunity, they blamed themselves rather than existing economic arrangements for their failure to advance. Faced with their own lack of mobility, autoworkers put special emphasis on that of their children.[^14]
+The American standard of living may have been within the grasp of some workers but many found that achieving it had unintended consequences. As social commentator David Riesman pointed out in his introduction to Eli Chinoy’s classic study of Lansing, Michigan autoworkers, Chinoy’s autoworkers were “victimized by the growing prestige of consumer goods,” convinced that the “care and feeding of products” was the “mainstay of life.”[^13] On reflection, Chinoy found, many workers saw consumption as a trap that prevented advancement. Chinoy cited one worker who regarded his downfall as the purchase of a car because it chained him to the factory to make payments. Still another believed he might have been somebody if only he had put his mind to it and “not worshipped the almighty dollar.” Chinoy concluded that autoworkers believed they had to make a choice between occupational advancement and acquisition of material possessions. When accumulation of goods proved emotionally unsatisfying, influenced by the mythology of opportunity, they blamed themselves rather than existing economic arrangements for their failure to advance. Faced with their own lack of mobility, autoworkers put special emphasis on that of their children.[^14]
 
 [^13]:	David Riesman, “Introduction,” Ely Chinoy, _Automobile Workers and the American Dream_ (Urbana: University of Illinois Press, 1992), xx-xxii.
 
 [^14]:	Chinoy, _Automobile Workers and the American Dream_, especially 122-6. Confirming findings from Milpitas, California can be found in Bennett M. Berger, _Working-Class Suburb: A Study of Auto Workers in Suburbia._ (Berkeley: University of California Press, 1960).
 
-Opting for enhanced consumption, Chinoy maintained, was compensation for the drudgery and alienation of the assembly line. That argument resonated with Harvey Swados’s. Swados was born in Buffalo, New York in 1920. As a young man, he affiliated with the anti-Stalinist Workers’ Party (as had, at one time, the author James Farrell and the literary critic Irving Howe). During the war, he toiled in factories before joining the Navy. Following the Armistice, he worked in marketing and public relations while writing fiction. Returning from the south of France in 1956, he opted for factory work at the Ford plant in Mawah, New Jersey to support his family rather than return to marketing. Given that his intellectual friends offered him condolences when he told them of his decision, Swados doubted that workers had been fully incorporated into the American mainstream or that the classes were converging in any meaningful way. They had, as he maintained in his trenchant essay “The Myth of the Happy Worker,” had considerably different life chances, assets, and beliefs. The vaunted enhanced consumption, even among relatively high paid auto workers, depended upon working overtime, second jobs and other family labor, and taking on larger debt loads.[^15]
+Opting for enhanced consumption, Chinoy maintained, was compensation for the drudgery and alienation of the assembly line. That argument resonated with Harvey Swados’s. Swados was born in Buffalo, New York in 1920. As a young man, he affiliated with the anti-Stalinist Workers’ Party. During the war, he toiled in factories before joining the Navy. Following the Armistice, he worked in marketing and public relations while writing fiction. Returning from the south of France in 1956, he opted for factory work at the Ford plant in Mawah, New Jersey to support his family rather than return to marketing. Given that his intellectual friends offered him condolences when he told them of his decision, Swados doubted that workers had been fully incorporated into the American mainstream or that the classes were converging in any meaningful way. They had, as he maintained in his trenchant essay “The Myth of the Happy Worker,” considerably different life chances, assets, and beliefs. The vaunted enhanced consumption, even among relatively high paid auto workers, depended upon working overtime, second jobs and other family labor, and taking on larger debt loads.[^15]
 
 [^15]:	Harvey Swados, “The Myth of the Happy Worker,” in Swados, _On the Line_, 235-57.
 
-Rejecting the congratulatory huzzahs about workers becoming middle class, Swados saw alienation as constituting an unbridgeable gulf, an experience that managers and bosses did not have or fully grasp. Swados did not deny that workers desired consumer goods, but he insisted that the meaning that they ascribed to accumulation and the function it served in their lives was completely different. Workers’ lives were fraught with insecurities not just about their status but also their work. Swados denied that the standard of living was the unifying element of American life. He argued forcefully that bodily labor (done with the back rather than on one’s bottom) was noisy, repetitive, regimented, and dangerous. Swados insisted that “there is one thing that the worker doesn’t do like the middle class: he works like a worker,” and his attitude toward his work “is generally compounded of hatred, shame and resignation” (237). In his gripping collection of short stories about auto work and workers, _On the Line_, he dramatized the frustrations and disappointments in working on the line as well as the dangers and dehumanizing regimentation. The stories highlight the ambiguity with which workers regard the automobile --- an appealing consumer item that holds the possibilities of freedom of movement while also chaining the worker in debt or even ending life on the factory floor or on the nation’s highways.
+Rejecting the congratulatory huzzahs about workers becoming middle class, Swados saw alienation as constituting an unbridgeable gulf, an experience that managers and bosses did not have or fully grasp. Swados accepted that workers desired consumer goods, but he insisted that the meaning that they ascribed to accumulation and the function it served in their lives was distinct from middle-class norms. Workers’ lives were fraught with insecurities not just about their status but also their work. Anointing the standard of living the unifying element of American life, Swados contended, obscured the crucial difference in achieving it through physical exertion in noisy and dangerous places rather on one's bottom in clean and safe locales. Swados insisted that “there is one thing that the worker doesn’t do like the middle class: he works like a worker,” and his attitude toward his work “is generally compounded of hatred, shame and resignation” (237). In his gripping collection of short stories about auto work and workers, _On the Line_, he dramatized the frustrations and disappointments in working on the line as well as the dangers and dehumanizing regimentation. The stories highlight the ambiguity with which workers regard the automobile --- an appealing consumer item that holds the possibilities of freedom of movement while also chaining the worker in debt or even ending life on the factory floor or on the nation’s highways.
 
-White ethnics were an especially celebrated success story of postwar inclusion. Once considered so unassimilable and excluded from “white” status by members of the dominant Anglo-Americans on account of religion, language, essential customs, complexion, and even supposed proclivity to radicalism, descendants of immigrants from Southern and Eastern Europe had, by most accounts, become acculturated. Americans had talked about the Slavic or Hebrew race, but by the 1950s the term “race” was reserved for nonwhites.[^16] Having left behind much, but by no means all, of their cultural inheritance, the newly designated ethnics finally entered American life as full-fledged participants. Surveys indicated larger numbers of Americans spoke English as their first tongue than before the war. As historian Thomas Archdeacon has noted, the economic gap separating white ethnic nationalities from natives and from each other narrowed substantially. Many in the second and third generations left enclaves and moved to more mixed neighborhoods. The result was a change in identity. As John Higham noted, those who hailed from Poland went from being Poles in America to Polish-Americans to American of Polish descent or derivation.[^17] By the same token, nativism declined precipitously and the assimilated ethnic Americans were generally welcomed by those in the mainstream. Even the link between radicalism and national origin had loosened. Anti-Communists continued to decry Communism as an un-American creed advanced by foreigners, yet the author of the McCarran-Walter Act of 1952, which prohibited the entrance of “subversives,” was careful to indicate that immigrants as a whole were not a problem and many had been essential to American greatness. For his part, Joseph McCarthy was not particularly anti-Semitic.[^18]
+White ethnics were an especially celebrated success story of postwar inclusion. Once considered so unassimilable that Anglo-Americans excluded them from "white" status, descendants of immigrants from Southern and Eastern Europe had by the 1950s become full-fledged Americans in the eyes of most native born. The complexions, customs, religion, and language that had supposedly disqualified them no longer mattered, especially as the second and third generations eagerly adopted mainstream ways. Surveys indicated larger numbers of Americans spoke English as their first tongue than before the war. As historian Thomas Archdeacon has noted, the economic gap separating white ethnic nationalities from natives and from each other narrowed substantially. Many in the second and third generations left enclaves and moved to more mixed neighborhoods. The result was a change in identity. As John Higham noted, those who hailed from Poland went from being Poles in America to Polish-Americans to American of Polish descent or derivation.[^16] By the same token, nativism declined precipitously. Even the link between radicalism and national origin had loosened. Anti-Communists continued to decry Communism as an un-American creed advanced by foreigners, yet the author of the McCarran-Walter Act of 1952, which prohibited the entrance of “subversives,” was careful to indicate that immigrants as a whole were not a problem and many had been essential to American greatness. For his part, Joseph McCarthy was not particularly anti-Semitic.[^17] This integration was one reason by the 1950s the term “race,” which once was applied to Slavs or Hebrews, was reserved for nonwhites.[^18]
 
-[^16]:	Matthew Frye Jacobson, _Whiteness of a Different Color: European Immigrants and the Alchemy of Race_ (Cambridge, Mass.: Harvard University Press, 1998); Nell Irvin. Painter, _The History of White People_ (New York: W.W. Norton, 2010); Werner Sollors, _The Invention of Ethnicity_ (New York: Oxford University Press, 1988).
 
-[^17]:	Thomas J. Archdeacon, _Becoming American: An Ethnic History_ (New York: Free Press; Collier Macmillan, 1983); Thomas J. Archdeacon, “Melting Pot or Cultural Pluralism? Changing Views on American Ethnicity,” _Revue Europeenne des Migrations Internationales_ 6, no. 1 (1990), 14-16; and John Higham, “Cultural Responses to Immigration,” in _Diversity and Its Discontents: Cultural Conflict and Common Ground in Contemporary American Society_, ed. Neil Smelser and Jeffrey Alexander (Princeton: Princeton University Press, 1999), 53. See also E. Allen Richardson, _Strangers in This Land: Pluralism and the Response to Diversity in the United States_ (Jefferson, NC: McFarland, 2010), 7-167.
+[^16]:	Thomas J. Archdeacon, _Becoming American: An Ethnic History_ (New York: Free Press; Collier Macmillan, 1983); Thomas J. Archdeacon, “Melting Pot or Cultural Pluralism? Changing Views on American Ethnicity,” _Revue Europeenne des Migrations Internationales_ 6, no. 1 (1990), 14-16; and John Higham, “Cultural Responses to Immigration,” in _Diversity and Its Discontents: Cultural Conflict and Common Ground in Contemporary American Society_, ed. Neil Smelser and Jeffrey Alexander (Princeton: Princeton University Press, 1999), 53. See also E. Allen Richardson, _Strangers in This Land: Pluralism and the Response to Diversity in the United States_ (Jefferson, NC: McFarland, 2010), 7-167.
 
-[^18]:	Richard Polenberg, _One Nation Divisible: Class, Race, and Ethnicity in the United States Since 1938_ (New York: Penguin Books, 1991), 122-26.
+[^17]:	Richard Polenberg, _One Nation Divisible: Class, Race, and Ethnicity in the United States Since 1938_ (New York: Penguin Books, 1991), 122-26.
 
-Postwar assimilation enabled scholars to put paid to the cultural pluralism that Horace Kallen had enunciated at the beginning of the century. Kallen had understood immigrant groups as pieces in a mosaic with each group more or less retaining its essential character. Americans would share a public culture but large swathes would be lived in ethnic enclaves. Writing in 1964, sociologist Milton Gordon contended that sense of shared peoplehood and common behavioral customs shifted from the ancestral group to the nation. Not only did the customs, values, and behaviors with which most white Americans identified belong to the national community rather than those of descent, but primary relationships ceased to be solely ethnic. Marriages generally stayed within religious groupings, not ethnic ones. Gordon did suggest that marriages tended to stay as well within status and class groups, which hastened the loss of ethnic identification.[^19]
+[^18]:	Matthew Frye Jacobson, _Whiteness of a Different Color: European Immigrants and the Alchemy of Race_ (Cambridge, Mass.: Harvard University Press, 1998); Nell Irvin. Painter, _The History of White People_ (New York: W.W. Norton, 2010).
+
+Postwar assimilation stood in contrast to the cultural pluralism that Horace Kallen had endorsed at the beginning of the century. Kallen had understood immigrant groups as pieces in a mosaic with each group more or less retaining its essential character. Americans would share a public culture but large swathes would be lived in ethnic enclaves. Writing in 1964, sociologist Milton Gordon contended that the nation had replaced the ancestral group as the source of the customs, values, and behaviors with which most white Americans identified. Marriage and place of residence ceased to be predominantly ethnic, although people tended to marry and live among those who shared their religious and class identifications -- choices that hastened the loss of ethnic identification.[^19]
 
 [^19]:	Milton Gordon, _Assimilation in American Life: The Role of Race, Religion, and National Origins._ (New York: Oxford University Press, 1964).
 
-Gordon built on Will Herberg’s concept of the triple melting pot which he introduced in his _Protestant, Catholic, Jew_ (1955) in which he traced how religion became the vehicle of assimilation. Immigrants had clung to national origin with its sense of shared language, custom, and religion for identity and security in a tumultuous and often hostile American environment. Since native-born Americans often rejected and denigrated them, and many always intended to return to their native lands, the first generation of immigrants were relatively isolated from American norms. The second generation, Herberg maintained, attempted to rid itself of “immigrant foreignness” in order to benefit from “the extraordinary mobility of American society.” Identifying with their families’ communities held them back but efforts to throw off those connections left them without real foundations. Adding to the alienation was a movement away from the ethnic-infused religion of their parents. Herberg’s third generation accepted that being an American meant jettisoning nationality, language, and customs but saw in religion a way to belong to a distinctive, defining group without giving up their Americanness.[^20]
+Gordon built on Will Herberg’s concept of the triple melting pot which Herberg introduced in his _Protestant, Catholic, Jew_ (1955) in which he traced how religion became the vehicle of assimilation. Immigrants had clung to national origin with its sense of shared language, custom, and religion for identity and security in a tumultuous and often hostile American environment. Since native-born Americans often rejected and denigrated them, and many always intended to return to their native lands, the first generation of immigrants were relatively isolated from American norms. The second generation, Herberg maintained, attempted to rid itself of “immigrant foreignness” in order to benefit from “the extraordinary mobility of American society.” Identifying with their families’ communities held them back but efforts to throw off those connections left them without real foundations. Adding to the alienation was a movement away from the ethnic-infused religion of their parents. Herberg’s third generation accepted that being an American meant jettisoning nationality, language, and customs but saw in religion a way to belong to a distinctive, defining group without giving up their Americanness.[^20]
 
 [^20]:	Will Herberg, _Protestant, Catholic, Jew: An Essay in American Religious Sociology._ (Garden City, N.Y.: Anchor, 1955), 18-32.
 
